# ai-gateway

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  presentation-script.md  railway.toml
.github/workflows/: release.yml
crates/ai-gateway/: Cargo.toml  README.md  build.rs  config.example.yaml
crates/ai-gateway/proptest-regressions/codex/: translate_request.txt
crates/ai-gateway/proptest-regressions/config/: validation.txt
crates/ai-gateway/proptest-regressions/gateway/: mod.txt
crates/ai-gateway/proptest-regressions/logger/: mod.txt
crates/ai-gateway/src/: lib.rs  main.rs  secrets.rs
crates/ai-gateway/src/admin/: mod.rs
crates/ai-gateway/src/admin/static/: index.html
crates/ai-gateway/src/cache/: exact.rs  mod.rs  semantic.rs
crates/ai-gateway/src/codex/: client.rs  effort_map.rs  errors.rs  instructions.rs  jwt.rs  mod.rs  model_map.rs  models_discovery.rs  sse.rs  translate_request.rs  translate_response.rs
crates/ai-gateway/src/config/: mod.rs  validation.rs
crates/ai-gateway/src/context/: manager.rs  mod.rs  strategies.rs
crates/ai-gateway/src/dashboard/: mod.rs
crates/ai-gateway/src/dashboard/static/: index.html
crates/ai-gateway/src/error/: mod.rs
crates/ai-gateway/src/gateway/: handlers.rs  mod.rs
crates/ai-gateway/src/logger/: mod.rs
crates/ai-gateway/src/metrics/: mod.rs
crates/ai-gateway/src/models/: mod.rs  openai.rs
crates/ai-gateway/src/oauth/: callback.rs  error.rs  flow.rs  manager.rs  mod.rs  pkce.rs  store.rs  token.rs
crates/ai-gateway/src/providers/: bedrock.rs  groq.rs  lmstudio.rs  mod.rs  nvidia_nim.rs  ollama.rs  openai_compatible.rs  together.rs  vllm.rs
crates/ai-gateway/src/router/: circuit_breaker.rs  latency_tracker.rs  mod.rs  rate_limiter.rs  router.rs  trace_id.rs
crates/ai-gateway/src/tray/: icon.rs  manager.rs  menu.rs  mod.rs  notification.rs  single_instance.rs  splash.rs
crates/ai-gateway/tests/: admin_codex_test_connection.rs  integration.rs  mock_providers.rs  performance.rs  tray_integration.rs
scripts/: build-installer.ps1  build-release.ps1  bump-version.ps1  installer.iss
