[workspace]
members = ["crates/ai-gateway"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-sdk-bedrockruntime = "1.76"
aws-config = "1.5"
qdrant-client = "1.13"
rust-embed = { version = "8.5", features = ["compression"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
proptest = "1.5"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
wiremock = "0.6"
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
