[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
tray = [
    "dep:image",
    "dep:tray-item",
    "dep:winit",
    "dep:winapi",
    "dep:winrt-notification",
]
headless = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-config = { workspace = true }
qdrant-client = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
proptest = { workspace = true }
clap = { workspace = true }
regex = "1.11"
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
axum-server = { workspace = true }
base64 = "0.22"
rand = "0.8"
ring = "0.17"
image = { version = "0.25.8", optional = true, default-features = false, features = ["jpeg", "png"] }

[target.'cfg(windows)'.dependencies]
tray-item = { version = "0.10.0", optional = true }
winit = { version = "0.30.12", optional = true }
winapi = { version = "0.3.9", optional = true, features = ["errhandlingapi", "handleapi", "minwinbase", "processthreadsapi", "synchapi", "winbase", "winerror", "winnt", "winuser"] }
winrt-notification = { version = "0.5.1", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
wiremock = { workspace = true }
tempfile = "3.14"
rcgen = { workspace = true }
rustls = "0.23"

[package.metadata.winres]
OriginalFilename = "ai-gateway.exe"
ProductName = "OBEY API Gateway"
FileDescription = "OBEY API Gateway with optional system tray support"
LegalCopyright = "Copyright © 2026"
